從根目錄開始抓圖片

--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
         <div class="container pt-5 pb-5">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/banner1.png" alt="First slide">
+                    <img class="d-block w-100" src="/img/banner1.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/banner2.png" alt="Second slide">
+                    <img class="d-block w-100" src="/img/banner2.png" alt="Second slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -302,43 +302,43 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper pb-5 pt-3">
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/01-大目降系列/東成-精釀白曝油(250x300).jpg" alt="">
+                        <img src="/img/product/01-大目降系列/東成-精釀白曝油(250x300).jpg" alt="">
                         精釀白曝油
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/03-家庭料理/東成-白豆油(430cc)(250x300).jpg" alt="">
+                        <img src="/img/product/03-家庭料理/東成-白豆油(430cc)(250x300).jpg" alt="">
                         家庭料理
                     </div>
                     <div class="swiper-slide flex-column d-inline-block">
-                        <img src="img/product/04-廚房調味/東成-原汁醬油1600ml.jpg" alt="">
+                        <img src="/img/product/04-廚房調味/東成-原汁醬油1600ml.jpg" alt="">
                         廚房調味
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/05-都會時尚/東成-味味露(500cc)(250x300).jpg" alt="">
+                        <img src="/img/product/05-都會時尚/東成-味味露(500cc)(250x300).jpg" alt="">
                         都會時尚
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/06-輕巧便利/東成-白曝油150cc(250x300).jpg" alt="">
+                        <img src="/img/product/06-輕巧便利/東成-白曝油150cc(250x300).jpg" alt="">
                         輕巧便利
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/07-年節禮品/東成-原汁特調醬油2入禮盒(430cc)(250x300).jpg" alt="">
+                        <img src="/img/product/07-年節禮品/東成-原汁特調醬油2入禮盒(430cc)(250x300).jpg" alt="">
                         年節禮品
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/02-辣椒系列/東成-辣椒豆瓣醬-450g(250x300).jpg" alt="">
+                        <img src="/img/product/02-辣椒系列/東成-辣椒豆瓣醬-450g(250x300).jpg" alt="">
                         辣椒系列
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/05-都會時尚/東成-蒜蓉沾料(500CC)(250x300).jpg" alt="">
+                        <img src="/img/product/05-都會時尚/東成-蒜蓉沾料(500CC)(250x300).jpg" alt="">
                         都會時尚
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/01-大目降系列/東成-鰹魚露(250x300).jpg" alt="">
+                        <img src="/img/product/01-大目降系列/東成-鰹魚露(250x300).jpg" alt="">
                         大目降
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/05-都會時尚/東成-滷肉醬油500ML(250x300).jpg" alt="">
+                        <img src="/img/product/05-都會時尚/東成-滷肉醬油500ML(250x300).jpg" alt="">
                         都會時尚
                     </div>
 
@@ -346,7 +346,7 @@
                         <span class="moreheight align-middle">看更多</span>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/product/03-家庭料理/東成-素蠔油(430cc).jpg" alt="">
+                        <img src="/img/product/03-家庭料理/東成-素蠔油(430cc).jpg" alt="">
                         家庭料理
                     </div>
                 </div>
