改檔案連結

--- a/index.html
+++ b/index.html
@@ -302,43 +302,43 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper pb-5 pt-3">
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/01-大目降系列/東成-精釀白曝油(250x300).jpg" alt="">
+                        <img src="/img/01-damu/東成-精釀白曝油(250x300).jpg" alt="">
                         精釀白曝油
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/03-家庭料理/東成-白豆油(430cc)(250x300).jpg" alt="">
+                        <img src="/img/04-familymeal/東成-白豆油(430cc).png" alt="">
                         家庭料理
                     </div>
                     <div class="swiper-slide flex-column d-inline-block">
-                        <img src="/img/product/04-廚房調味/東成-原汁醬油1600ml.jpg" alt="">
+                        <img src="/img/05-kitchen/東成-原汁醬油1600ml.png" alt="">
                         廚房調味
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/05-都會時尚/東成-味味露(500cc)(250x300).jpg" alt="">
+                        <img src="/img/06-modern/東成-味味露(500cc).png" alt="">
                         都會時尚
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/06-輕巧便利/東成-白曝油150cc(250x300).jpg" alt="">
+                        <img src="/img/07-light/東成-白曝油(150cc).png" alt="">
                         輕巧便利
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/07-年節禮品/東成-原汁特調醬油2入禮盒(430cc)(250x300).jpg" alt="">
+                        <img src="/img/08-festival/東成-原汁特調醬油2入禮盒(430cc).png" alt="">
                         年節禮品
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/02-辣椒系列/東成-辣椒豆瓣醬-450g(250x300).jpg" alt="">
+                        <img src="/img/03-spicy/東成-辣椒豆瓣醬-450g.png" alt="">
                         辣椒系列
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/05-都會時尚/東成-蒜蓉沾料(500CC)(250x300).jpg" alt="">
+                        <img src="/img/06-modern/東成-蒜蓉沾料(500cc).png" alt="">
                         都會時尚
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/01-大目降系列/東成-鰹魚露(250x300).jpg" alt="">
+                        <img src="/img/02-damu/東成-鰹魚露(已去背).png" alt="">
                         大目降
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/05-都會時尚/東成-滷肉醬油500ML(250x300).jpg" alt="">
+                        <img src="/img/06-modern/東成-滷肉醬油 500ml.png" alt="">
                         都會時尚
                     </div>
 
@@ -346,7 +346,7 @@
                         <span class="moreheight align-middle">看更多</span>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="/img/product/03-家庭料理/東成-素蠔油(430cc).jpg" alt="">
+                        <img src="/img/04-familymeal/東成-素蠔油(430cc).png" alt="">
                         家庭料理
                     </div>
                 </div>
