首頁地圖修改

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/css/swiper.css">
     <link rel="stylesheet" href="navbar.css">
-    <title>homepage</title>
+    <title>東成醬油</title>
 
     <style>
         *{
@@ -211,9 +211,12 @@
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
             <a class="navbar-brand pt-0 pb-0" href="">
-
-                <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
-                <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
+                <a href="index.html">
+                    <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
+                </a>
+                <a href="index.html">
+                    <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
+                </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -365,8 +368,8 @@
         <div class="bgimg container-fluid">
             <h3 class="text-center bgimg h3 pt-sm-4 pb-sm-4 pt-2 pb-2 textcolor">展示中心</h3>
         </div>
-        <div id="showcenter" class="container d-flex justify-content-between pb-5">
-            <div id="showcenter_L" class="pl-5 pt-5">
+        <div id="showcenter" class="container d-flex justify-content-sm-between pb-5 flex-wrap">
+            <div id="showcenter_L" class="pl-5 pt-5 mb-5">
                 <h4 class="font-weight-bold pb-3">東成會館</h4>
                 <p class="fontbigger">電話 : 06-580-1919</p>
                 <p class="fontbigger">傳真 : 06-580-2766</p>
@@ -377,7 +380,7 @@
                     </div>
                 </a>
             </div>
-            <div id="showcenter_R">
+            <div id="showcenter_R" class=" col-12 col-sm-6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.9448524694403!2d120.32726231496784!3d23.025796984951462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e7010ff47e47d%3A0xdb13965088ac8bea!2z5p2x5oiQ5pyD6aSoLeadseaIkOW5uOemj-WpmuWutOacg-mkqA!5e0!3m2!1szh-TW!2stw!4v1542175582173"
                     width="100%" height="100%" frameborder="1" style="border:2px solid #B97966" allowfullscreen></iframe>
             </div>
@@ -404,8 +407,8 @@
                 <p>E-mail : dcfoodtaipei@gmail.com</p>
                 <a href="https://zh-tw.facebook.com/%E6%9D%B1%E6%88%90%E9%86%AC%E6%B2%B9-152988991466430/?ref=page_internal">
                     <div id="fb_1" class="aa fb cow-12 col-sm-4 mr-4"></div>
-                </a>                
-                
+                </a>
+
                 <a href="https://zh-tw.facebook.com/DongCheng065801919">
                     <div id="fb_2" class="aa fb cow-12 col-sm-4 "></div>
                 </a>
