--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         *{
             font-family: Arial,Microsoft JhengHei,微軟正黑體;
         }
+        body{
+            background-color: #F6D8AC;
+        }
         .bannerbgimg {
             background-image: url('img/bd5.jpg');
             background-position: 0% 50%;
