--- a/index.html
+++ b/index.html
@@ -213,13 +213,9 @@
     <!-- 這裡以下貼在<body>的下一行 -->
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
-            <a class="navbar-brand pt-0 pb-0" href="">
-                <a href="index.html">
+            <a class="navbar-brand pt-0 pb-0" href="index.html">
                     <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
-                </a>
-                <a href="index.html">
                     <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
-                </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
