新增商品圖片 修改圖片讀取路徑

--- a/damu.html
+++ b/damu.html
@@ -100,28 +100,28 @@
         }
 
         #img1 {
-            background-image: url("img/02-大目降系列/東成-大目降-白曝油膏430ml.png");
+            background-image: url("img/02-damu/東成-大目降-白曝油膏430ml.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img2 {
-            background-image: url("img/02-大目降系列/東成-黑豆白曝油(430cc).png");
+            background-image: url("img/02-damu/東成-黑豆白曝油(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img3 {
-            background-image: url("img/02-大目降系列/東成-鰹魚露(已去背).png");
+            background-image: url("img/02-damu/東成-鰹魚露(已去背).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img4 {
-            background-image: url("img/02-大目降系列/東成-大目降-白曝油膏430ml.png");
+            background-image: url("img/02-damu/東成-大目降-白曝油膏430ml.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
