--- a/festival.html
+++ b/festival.html
@@ -100,42 +100,42 @@
         }
 
         #img1 {
-            background-image: url("img/08-年節禮品/東成-白曝油2入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-白曝油2入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img2 {
-            background-image: url("img/08-年節禮品/東成-黑豆蔭油膏6入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-黑豆蔭油膏6入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img3 {
-            background-image: url("img/08-年節禮品/東成-黑豆蔭油膏2入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-黑豆蔭油膏2入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img4 {
-            background-image: url("img/08-年節禮品/東成-黑豆蔭油膏6入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-黑豆蔭油膏6入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img5 {
-            background-image: url("img/08-年節禮品/東成-黑豆蔭油膏2入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-黑豆蔭油膏2入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img6 {
-            background-image: url("img/08-年節禮品/東成-黑豆蔭油膏6入禮盒(430cc).png");
+            background-image: url("img/08-festival/東成-黑豆蔭油膏6入禮盒(430cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
