--- a/index.html
+++ b/index.html
@@ -345,7 +345,10 @@
                     </div>
 
                     <div class="swiper-slide  ">
-                        <span class="moreheight align-middle">看更多</span>
+                        <a href="damu.html">
+                            <img src="img/more.jpg" alt="">
+                        </a>
+                       
                     </div>
                     <div class="swiper-slide flex-column">
                         <img src="img/04-familymeal/東成-素蠔油(430cc).jpg" alt="">
