--- a/kitchen.html
+++ b/kitchen.html
@@ -100,34 +100,34 @@
             
         }
         #img1 {
-            background-image: url("img/05-廚房調味/東成-原汁醬油1600ml.png");
+            background-image: url("img/05-kitchen/東成-原汁醬油1600ml.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img2 {
-            background-image: url("img/05-廚房調味/東成-素食醬油(1600cc).png");
+            background-image: url("img/05-kitchen/東成-素食醬油(1600cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img3 {
-            background-image: url("img/05-廚房調味/東成-醇釀白油(520cc).png");
+            background-image: url("img/05-kitchen/東成-醇釀白油(520cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img4 {
-            background-image: url("img/05-廚房調味/東成-原汁醬油(520cc).png");
+            background-image: url("img/05-kitchen/東成-原汁醬油(520cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
         #img5 {
-            background-image: url("img/05-廚房調味/東成-原汁醬油(500cc).png");
+            background-image: url("img/05-kitchen/東成-原汁醬油(500cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
