--- a/lightConvenience.html
+++ b/lightConvenience.html
@@ -99,21 +99,21 @@
             background-color: whitesmoke;
         }
         #img1 {
-            background-image: url("img/07-輕巧便利/東成-精釀白曝油(150cc).png");
+            background-image: url("img/07-light/東成-精釀白曝油(150cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img2 {
-            background-image: url("img/07-輕巧便利/東成-白曝油(150cc).png");
+            background-image: url("img/07-light/東成-白曝油(150cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img3 {
-            background-image: url("img/07-輕巧便利/東成-白豆油(150cc).png");
+            background-image: url("img/07-light/東成-白豆油(150cc).png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
