--- a/spicy.html
+++ b/spicy.html
@@ -99,21 +99,21 @@
         }
 
         #img1 {
-            background-image: url("img/03-辣椒系列/東成-豆瓣醬-450g.png");
+            background-image: url("img/03-spicy/東成-豆瓣醬-450g.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img2 {
-            background-image: url("img/03-辣椒系列/東成-辣椒豆瓣醬-450g.png");
+            background-image: url("img/03-spicy/東成-辣椒豆瓣醬-450g.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
         }
 
         #img3 {
-            background-image: url("img/03-辣椒系列/東成-素食豆瓣醬.png");
+            background-image: url("img/03-spicy/東成-素食豆瓣醬.png");
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
