--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
         <div class="container pt-5 pb-5">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/img/banner1.png" alt="First slide">
+                    <img class="d-block w-100" src="img/banner1.png" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/img/banner2.png" alt="Second slide">
+                    <img class="d-block w-100" src="img/banner2.png" alt="Second slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -351,8 +351,10 @@
                        
                     </div>
                     <div class="swiper-slide flex-column">
+
                         <img src="img/04-familymeal/東成-素蠔油(430cc).jpg" alt="">
                         家庭料理
+
                     </div>
                 </div>
                 <!-- Add Pagination -->
