標題背景圖片路徑

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         .bgimg{
-            background-image: url('/img/bd9-70.jpg');
+            background-image: url('img/bd9-70.jpg');
             background-size: cover;            
         }
         .textcolor{
