--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
                     <li class="nav-item text-sm-center">
                         <a class="nav-link " href="showCenter.html">展示中心</a>
                     </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="connection.html">連絡我們</a>
+                    </li>
                 </ul>
             </div>
     </nav>
@@ -268,7 +271,7 @@
             <h3 class="text-center bgimg h3 pt-sm-4 pb-sm-4 pt-2 pb-2 textcolor">最新消息</h3>
         </div>
         <div class="container">
-            <div>
+            <div class="pl-3">
 
                 <div>
                     <h5>2018/11/04</h5>
@@ -395,7 +398,7 @@
 
         <div id="footer-contant" class="container row justify-content-around">
             <div class=" col-mb-2"></div>
-            <div id="footer_l" class="aa col-sm-5 col-12">
+            <div id="footer_l" class="aa col-sm-5 col-12 pb-3">
                 <p>東懋食品股份有限公司</p>
                 <p>DONG MAO FOODD LTD</p>
                 <p>電話 : 06-5901968</p>
