--- a/damu.html
+++ b/damu.html
@@ -131,35 +131,38 @@
 
 <body>
 
-        <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top">
-                <div class="container ">
-                    <a class="navbar-brand pt-0 pb-0" href="">
-        
-                        <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
-                        <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-        
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav ">
-                            <li class="nav-item text-sm-center">
-                                <a class="nav-link" href="#">關於東成 <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item text-sm-center">
-                                <a class="nav-link" href="#">最新消息</a>
-                            </li>
-                            <li class="nav-item  text-sm-center">
-                                <a class="nav-link " href="#" id="navbarDropdown">商品介紹</a>
-                            </li>
-                            <li class="nav-item text-sm-center">
-                                <a class="nav-link " href="#">展示中心</a>
-                            </li>
-                        </ul>
-                    </div>
-            </nav>
+    <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top">
+        <div class="container ">
+            <a class="navbar-brand pt-0 pb-0" href="">
+
+                <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
+                <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ">
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link" href="#">最新消息</a>
+                    </li>
+                    <li class="nav-item  text-sm-center">
+                        <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="showCenter.html">展示中心</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="connection.html">連絡我們</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
 
     <div id="navbar222" class="mb-3 mt-3 container nav-fill w-100">
         <div class="container">
@@ -271,7 +274,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
 
-        <script src="navbar.js"></script>
+    <script src="navbar.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
     <script>
