--- a/modern.html
+++ b/modern.html
@@ -176,16 +176,19 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="#">關於東成 <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
                     </li>
                     <li class="nav-item text-sm-center">
                         <a class="nav-link" href="#">最新消息</a>
                     </li>
                     <li class="nav-item  text-sm-center">
-                        <a class="nav-link " href="#" id="navbarDropdown">商品介紹</a>
+                        <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link " href="#">展示中心</a>
+                        <a class="nav-link " href="showCenter.html">展示中心</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="connection.html">連絡我們</a>
                     </li>
                 </ul>
             </div>
