--- a/showCenter.html
+++ b/showCenter.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="aboutDongcheng.html">關於東成 <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
                     </li>
                     <li class="nav-item text-sm-center">
                         <a class="nav-link" href="#">最新消息</a>
@@ -40,6 +40,9 @@
                     </li>
                     <li class="nav-item text-sm-center">
                         <a class="nav-link " href="showCenter.html">展示中心</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="connection.html">連絡我們</a>
                     </li>
                 </ul>
             </div>
