商品頁面上FOOTER

--- a/festival.html
+++ b/festival.html
@@ -140,6 +140,35 @@
             background-repeat: no-repeat;
             background-position: center;
         }
+        /* 這是footer */
+        .footer {
+            background-color: #B97966;
+            width: 100%;
+            height: auto;
+            padding-top: 50px;
+        }
+        #footer-contant{
+            margin: 0 auto;
+            height: auto;
+            width: 100%; 
+            color: white;          
+        }
+        .container{
+            max-width: 1170px;
+        }
+        #phone{
+           padding-left: 44px; 
+        }
+        #fb_1{
+            background-image: url("img/FBoil170x37.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        #fb_2{
+            background-image: url("img/FBresturant170x37.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
     </style>
 </head>
 
@@ -176,6 +205,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
     </nav>
 
     <div id="navbar222" class="mb-3 mt-3 container nav-fill w-100">
@@ -328,14 +358,44 @@
                         不添加防腐劑，健康、無負擔之優良產品。
                         <br>
                         ※ 本產品不含防腐劑，開瓶後須冷藏，風味更佳
-
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
+
+    <!-- 這是footer -->
+    <footer class="footer ">
+
+        <div id="footer-contant" class="container row justify-content-around">
+            <div class=" col-mb-2"></div>
+            <div id="footer_l" class="aa col-sm-5 col-12 pb-3">
+                <p>東懋食品股份有限公司</p>
+                <p>DONG MAO FOODD LTD</p>
+                <p>電話 : 06-5901968</p>
+                <p>傳真 : 06-5901097</p>
+                <p>E-mail : sauce@dcsp.com.tw</p>
+                <p>台南市新化區知義里新和庄10-1號</p>
+            </div>
+            <div id="footer_r" class="aa col-sm-5 col-12">
+                <p>台北聯絡處</p>
+                <p>電話 : (02)28285629 </p>
+                <p id="phone">(03)3628929</span></p>
+                <p>傳真 : (02)28285628</p>
+                <p>E-mail : dcfoodtaipei@gmail.com</p>
+                <a href="https://zh-tw.facebook.com/%E6%9D%B1%E6%88%90%E9%86%AC%E6%B2%B9-152988991466430/?ref=page_internal">
+                    <div id="fb_1" class="aa fb cow-12 col-sm-4 mr-4"></div>
+                </a>
+
+                <a href="https://zh-tw.facebook.com/DongCheng065801919">
+                    <div id="fb_2" class="aa fb cow-12 col-sm-4 "></div>
+                </a>
+            </div>
+
+        </div>
+    </footer>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
