--- a/modern.html
+++ b/modern.html
@@ -156,7 +156,35 @@
             background-repeat: no-repeat;
             background-position: center;
         }
-        
+        /* 這是footer */
+        .footer {
+            background-color: #B97966;
+            width: 100%;
+            height: auto;
+            padding-top: 50px;
+        }
+        #footer-contant{
+            margin: 0 auto;
+            height: auto;
+            width: 100%; 
+            color: white;          
+        }
+        .container{
+            max-width: 1170px;
+        }
+        #phone{
+           padding-left: 44px; 
+        }
+        #fb_1{
+            background-image: url("img/FBoil170x37.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+        #fb_2{
+            background-image: url("img/FBresturant170x37.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
     </style>
 </head>
 
@@ -192,6 +220,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
     </nav>
 
     <div id="navbar222" class="mb-3 mt-3 container nav-fill w-100">
