商品介紹footer除錯

--- a/kitchen.html
+++ b/kitchen.html
@@ -161,6 +161,15 @@
             background-repeat: no-repeat;
             background-size: contain;
         }
+         /* footer */
+         .aa {
+            float: left;            
+        }
+
+        .fb {
+            width: 170px;
+            height: 43px;
+        }
     </style>
 </head>
 
