商品介紹navbar除錯
補上點LOGO可以回首頁

--- a/familymeal.html
+++ b/familymeal.html
@@ -200,11 +200,10 @@
 
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
-            <a class="navbar-brand pt-0 pb-0" href="">
-
+            <a class="navbar-brand pt-0 pb-0" href="index.html">
                 <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
                 <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
-            </a>
+        </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
