--- a/spicy.html
+++ b/spicy.html
@@ -222,7 +222,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container pb-4">
 
         <div class="swiper-container" id="swiper_1">
             <div class="swiper-wrapper">
