--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
         .fontbigger {
             font-size: 20px;
         }
-
+        a:hover{
+            color: black;
+            text-decoration: none;
+        }
         /* 展示中心 */
         .botton {
             width: 150px;
@@ -214,8 +217,8 @@
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
             <a class="navbar-brand pt-0 pb-0" href="index.html">
-                    <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
-                    <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
+                <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
+                <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -307,57 +310,77 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper pb-5 pt-3">
                     <div class="swiper-slide flex-column">
-                        <img src="img/02-damu/東成-精釀白曝油(250x300).jpg" alt="">
-                        精釀白曝油
+                        <a href="damu.html">
+                            <img src="img/02-damu/東成-精釀白曝油(250x300).jpg" alt="">
+                            大目降
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/04-familymeal/東成-白豆油(430cc)(250x300).jpg" alt="">
-                        家庭料理
+                        <a href="familymeal.html">
+                            <img src="img/04-familymeal/東成-白豆油(430cc)(250x300).jpg" alt="">
+                            家庭料理
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column d-inline-block">
-                        <img src="img/05-kitchen/東成-原汁醬油1600ml.jpg" alt="">
-                        廚房調味
+                        <a href="kitchen.html">
+                            <img src="img/05-kitchen/東成-原汁醬油1600ml.jpg" alt="">
+                            廚房調味
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/06-modern/東成-味味露(500cc)(250x300).jpg" alt="">
-                        都會時尚
+                        <a href="modern.html">
+                            <img src="img/06-modern/東成-味味露(500cc)(250x300).jpg" alt="">
+                            都會時尚
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/07-light/東成-白曝油150cc(250x300).jpg" alt="">
-                        輕巧便利
+                        <a href="lightConvenience.html">
+                            <img src="img/07-light/東成-白曝油150cc(250x300).jpg" alt="">
+                            輕巧便利
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/08-festival/東成-原汁特調醬油2入禮盒(430cc)(250x300).jpg" alt="">
-                        年節禮品
+                        <a href="festival.html">
+                            <img src="img/08-festival/東成-原汁特調醬油2入禮盒(430cc)(250x300).jpg" alt="">
+                            年節禮品
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/03-spicy/東成-辣椒豆瓣醬-450g(250x300).jpg" alt="">
-                        辣椒系列
+                        <a href="spicy.html">
+                            <img src="img/03-spicy/東成-辣椒豆瓣醬-450g(250x300).jpg" alt="">
+                            辣椒系列
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/06-modern/東成-蒜蓉沾料(500CC)(250x300).jpg" alt="">
-                        都會時尚
+                        <a href="modern.html">
+                            <img src="img/06-modern/東成-蒜蓉沾料(500CC)(250x300).jpg" alt="">
+                            都會時尚
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/02-damu/東成-鰹魚露(250x300).jpg" alt="">
-                        大目降
+                        <a href="damu.html">
+                            <img src="img/02-damu/東成-鰹魚露(250x300).jpg" alt="">
+                            大目降
+                        </a>
                     </div>
                     <div class="swiper-slide flex-column">
-                        <img src="img/06-modern/東成-滷肉醬油500ML(250x300).jpg" alt="">
-                        都會時尚
+                        <a href="modern.html">
+                            <img src="img/06-modern/東成-滷肉醬油500ML(250x300).jpg" alt="">
+                            都會時尚
+                        </a>
                     </div>
 
                     <div class="swiper-slide  ">
                         <a href="damu.html">
                             <img src="img/more.jpg" alt="">
                         </a>
-                       
+
                     </div>
                     <div class="swiper-slide flex-column">
-
-                        <img src="img/04-familymeal/東成-素蠔油(430cc).jpg" alt="">
-                        家庭料理
-
+                        <a href="kitchen.html">
+                            <img src="img/04-familymeal/東成-素蠔油(430cc).jpg" alt="">
+                            家庭料理
+                        </a>
                     </div>
                 </div>
                 <!-- Add Pagination -->
