--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
             font-size: 20px;
         }
         a:hover{
-            color: black;
+            color: #007bff;
             text-decoration: none;
+        }
+        a{
+            color:black;
         }
         /* 展示中心 */
         .botton {
