首頁商品介紹bug

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
         a{
             color:black;
         }
+        .tomore{
+           
+           height: auto; 
+        }
         /* 展示中心 */
         .botton {
             width: 150px;
@@ -315,7 +319,7 @@
                     <div class="swiper-slide flex-column">
                         <a href="damu.html">
                             <img src="img/02-damu/東成-精釀白曝油(250x300).jpg" alt="">
-                            大目降
+                            目降系列
                         </a>
                     </div>
                     <div class="swiper-slide flex-column">
@@ -324,7 +328,7 @@
                             家庭料理
                         </a>
                     </div>
-                    <div class="swiper-slide flex-column d-inline-block">
+                    <div class="swiper-slide flex-column">
                         <a href="kitchen.html">
                             <img src="img/05-kitchen/東成-原汁醬油1600ml.jpg" alt="">
                             廚房調味
@@ -363,7 +367,7 @@
                     <div class="swiper-slide flex-column">
                         <a href="damu.html">
                             <img src="img/02-damu/東成-鰹魚露(250x300).jpg" alt="">
-                            大目降
+                            目降系列
                         </a>
                     </div>
                     <div class="swiper-slide flex-column">
@@ -373,9 +377,10 @@
                         </a>
                     </div>
 
-                    <div class="swiper-slide  ">
+                    <div class="swiper-slide flex-column">
                         <a href="damu.html">
-                            <img src="img/more.jpg" alt="">
+                           <img src="img/more-01.jpg" alt="">
+                           更多商品
                         </a>
 
                     </div>
