首頁聯絡我們的聯

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <a class="nav-link " href="showCenter.html">展示中心</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link " href="connection.html">連絡我們</a>
+                        <a class="nav-link " href="connection.html">聯絡我們</a>
                     </li>
                 </ul>
             </div>
