--- a/modern.html
+++ b/modern.html
@@ -215,7 +215,7 @@
                         <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="#">最新消息</a>
+                        <a class="nav-link" href="latestNews.html">最新消息</a>
                     </li>
                     <li class="nav-item  text-sm-center">
                         <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
@@ -224,7 +224,7 @@
                         <a class="nav-link " href="showCenter.html">展示中心</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link " href="connection.html">連絡我們</a>
+                        <a class="nav-link " href="connection.html">聯絡我們</a>
                     </li>
                 </ul>
             </div>
