--- a/connection.html
+++ b/connection.html
@@ -21,7 +21,6 @@
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
             <a class="navbar-brand pt-0 pb-0" href="index.html">
-
                 <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
                 <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
             </a>
@@ -31,24 +30,24 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <li class="nav-item text-sm-center">
-                    <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
-                </li>
-                <li class="nav-item text-sm-center">
-                    <a class="nav-link" href="latestNews.html">最新消息</a>
-                </li>
-                <li class="nav-item  text-sm-center">
-                    <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
-                </li>
-                <li class="nav-item text-sm-center">
-                    <a class="nav-link " href="showCenter.html">展示中心</a>
-                </li>
-                <li class="nav-item text-sm-center">
-                    <a class="nav-link " href="connection.html">聯絡我們</a>
-                </li>
+                <ul class="navbar-nav ">
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link" href="#">最新消息</a>
+                    </li>
+                    <li class="nav-item  text-sm-center">
+                        <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="showCenter.html">展示中心</a>
+                    </li>
+                    <li class="nav-item text-sm-center">
+                        <a class="nav-link " href="connection.html">聯絡我們</a>
+                    </li>
                 </ul>
             </div>
-        </div>
     </nav>
     <!-- 這裡以上貼在<body>的下一行 -->
 
