首頁最新消息聯結

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="#">最新消息</a>
+                        <a class="nav-link" href="latestNews.html">最新消息</a>
                     </li>
                     <li class="nav-item  text-sm-center">
                         <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
@@ -284,23 +284,31 @@
             <div class="pl-3">
 
                 <div>
-                    <h5>2018/11/04</h5>
-                    <p>2019圍爐年菜，隆重推出！</p>
+                    <a href="latestNews.html">
+                        <h5>2018/11/04</h5>
+                        <p>2019圍爐年菜，隆重推出！</p>
+                    </a>
                 </div>
                 <hr>
                 <div>
-                    <h5>2018/11/04</h5>
-                    <p>2018尾牙 & 2019春酒，早鳥專案，開跑囉！</p>
+                    <a href="latestNews.html">
+                        <h5>2018/11/04</h5>
+                        <p>2018尾牙 & 2019春酒，早鳥專案，開跑囉！</p>
+                    </a>
                 </div>
                 <hr>
                 <div>
-                    <h5>2018/03/17</h5>
-                    <p>會館營業公告</p>
+                    <a href="latestNews.html">
+                        <h5>2018/03/17</h5>
+                        <p>會館營業公告</p>
+                    </a>
                 </div>
                 <hr>
                 <div>
-                    <h5>2018/01/22</h5>
-                    <p>東成醬油免運費107年3月1日起優惠取消公告</p>
+                    <a href="latestNews.html">
+                        <h5>2018/01/22</h5>
+                        <p>東成醬油免運費107年3月1日起優惠取消公告</p>
+                    </a>
                 </div>
                 <hr>
             </div>
@@ -379,8 +387,8 @@
 
                     <div class="swiper-slide flex-column">
                         <a href="damu.html">
-                           <img src="img/more-01.jpg" alt="">
-                           更多商品
+                            <img src="img/more-01.jpg" alt="">
+                            更多商品
                         </a>
 
                     </div>
