--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
     </section>
     <!-- 最新消息 -->
     <section id="news" class="bgclr1">
-        <div class="bgimg container-fluid">
+        <div class="bgimg container-fluid ">
             <h3 class="text-center bgimg h3 pt-sm-4 pb-sm-4 pt-2 pb-2 textcolor">最新消息</h3>
         </div>
-        <div class="container">
-            <div class="pl-3">
+        <div class="container pt-5">
+            <div class="pl-3 ">
 
                 <div>
                     <a href="latestNews.html">
