--- a/aboutDongcheng.html
+++ b/aboutDongcheng.html
@@ -20,7 +20,7 @@
     <!-- 這裡以下貼在<body>的下一行 -->
     <nav class="navbar navbar-expand-md navbar-light bg-cus fixed-top ">
         <div class="container ">
-            <a class="navbar-brand pt-0 pb-0" href="index.html">
+            <a class="navbar-brand pt-0 pb-0" href="">
 
                 <img src="img/東成醬油-logo-pc.png" class=" align-top" alt="" id="logo_img">
                 <img src="img/東成醬油-logo-phone.png" class=" align-top" alt="" id="logo_img_2">
@@ -33,41 +33,23 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="aboutDongcheng.html">關於東成</a>
+                        <a class="nav-link" href="#">關於東成 <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link" href="latestNews.html">最新消息</a>
+                        <a class="nav-link" href="#">最新消息</a>
                     </li>
                     <li class="nav-item  text-sm-center">
-                        <a class="nav-link " href="damu.html" id="navbarDropdown">商品介紹</a>
+                        <a class="nav-link " href="#" id="navbarDropdown">商品介紹</a>
                     </li>
                     <li class="nav-item text-sm-center">
-                        <a class="nav-link " href="showCenter.html">展示中心</a>
-                    </li>
-                    <li class="nav-item text-sm-center">
-                        <a class="nav-link " href="connection.html">聯絡我們</a>
+                        <a class="nav-link " href="#">展示中心</a>
                     </li>
                 </ul>
             </div>
-        </div>
     </nav>
 
 
     <div id="bgc">
-        <ul id="aboutNav">
-            <li class="aboutNavli" >
-                <a href="#aboutbgc">關於東成</a>
-            </li>
-            <li class="aboutNavli">
-                <a href="#ideabgc">經營理念</a>
-            </li>
-            <li class="aboutNavli">
-                <a href="#visionbgc">企業願景</a>
-            </li>
-            <li class="aboutNavli">
-                <a href="#servicebgc">服務項目</a>
-            </li>
-        </ul>
         <div class="bgc1" id="aboutbgc">
             <div class="about">
                 <div class="top">
